--- a/operator/v1/0000_50_ingress-operator_00-ingresscontroller.crd.yaml
+++ b/operator/v1/0000_50_ingress-operator_00-ingresscontroller.crd.yaml
@@ -45,6 +45,82 @@ spec:
         spec:
           description: spec is the specification of the desired behavior of the IngressController.
           properties:
+            clientTLS:
+              description: clientTLS specifies settings for requesting and verifying
+                client certificates, which can be used to enable mutual TLS.
+              properties:
+                allowedSubjectPatterns:
+                  description: allowedSubjectPatterns specifies a list of regular
+                    expressions that should be matched against the distinguished name
+                    on a client certificate to filter requests.  If this list is empty,
+                    no filtering is performed.  If the list is nonempty, then at least
+                    one pattern must match a client certificate's distinguished name
+                    or else the ingress controller denies the request.
+                  items:
+                    type: string
+                  type: array
+                certificateRevocationList:
+                  description: certificateRevocationList specifies how to obtain a
+                    certificate revocation list that should be used to verify a client's
+                    certificate.
+                  properties:
+                    secretReference:
+                      description: secretReference specifies the secret containing
+                        the certificate revocation list that should be used to verify
+                        a client's certificate.
+                      properties:
+                        name:
+                          description: name is the metadata.name of the referenced
+                            secret
+                          type: string
+                      required:
+                      - name
+                      type: object
+                    source:
+                      description: source specifies how the certificate revocation
+                        list should be obtained.  Allowed values are "Secret" and
+                        "URL".  If "Secret" is specified, the name of a secret must
+                        be specified in the secretReference field.  If "URL" is provided,
+                        a URL must be specified in the url field.
+                      enum:
+                      - ""
+                      - Required
+                      - Optional
+                      type: string
+                    url:
+                      description: url specifies a URL that can be used to update
+                        the certificate revocation list that should be used to verify
+                        a client's certificate. The ingress operator periodically
+                        polls the URL and updates the ingress controller's list.
+                      type: string
+                  required:
+                  - source
+                  type: object
+                clientCA:
+                  description: clientCA is an optional reference to a configmap containing
+                    the PEM-encoded CA certificate bundle that should be used to verify
+                    a client's certificate.  If omitted, the system trust bundle is
+                    used.
+                  properties:
+                    name:
+                      description: name is the metadata.name of the referenced config
+                        map
+                      type: string
+                  required:
+                  - name
+                  type: object
+                clientCertificatePolicy:
+                  description: clientCertificatePolicy specifies whether the ingress
+                    controller requires clients to provide certificates.  This field
+                    accepts the values "Required" or "Optional".
+                  enum:
+                  - ""
+                  - Required
+                  - Optional
+                  type: string
+              required:
+              - clientCertificatePolicy
+              type: object
             defaultCertificate:
               description: "defaultCertificate is a reference to a secret containing
                 the default certificate served by the ingress controller. When Routes
@@ -110,6 +186,14 @@ spec:
                               description: classicLoadBalancerParameters holds configuration
                                 parameters for an AWS classic load balancer. Present
                                 only if type is Classic.
+                              properties:
+                                connectionIdleTimeoutSeconds:
+                                  description: connectionIdleTimeoutSeconds is the
+                                    time interval, in seconds, that a connection may
+                                    be idle before the load balancer closes the connection.  If
+                                    not set, the timeout defaults to 60 seconds.
+                                  format: int64
+                                  type: integer
                               type: object
                             networkLoadBalancer:
                               description: networkLoadBalancerParameters holds configuration
@@ -204,6 +288,25 @@ spec:
               required:
               - type
               type: object
+            httpEmptyRequestsPolicy:
+              description: "httpEmptyRequestsPolicy describes how HTTP connections
+                should be handled if the connection times out before a request is
+                received. Allowed values for this field are \"Respond\" and \"Ignore\".
+                \ If the field is set to \"Respond\", the ingress controller sends
+                an HTTP 400 or 408 response, logs the connection (if access logging
+                is enabled), and counts the connection in the appropriate metrics.
+                \ If the field is set to \"Ignore\", the ingress controller closes
+                the connection without sending a response, logging the connection,
+                or incrementing metrics.  If the field is empty, the default value
+                is \"Respond\". \n Typically, these connections come from load balancers'
+                health probes or Web browsers' speculative connections (\"preconnect\")
+                and can be safely ignored.  However, these requests may also be caused
+                by network errors, and so setting this field to \"Respond\" may impede
+                detection and diagnosis of problems."
+              enum:
+              - Respond
+              - Ignore
+              type: string
             httpHeaders:
               description: "httpHeaders defines policy for HTTP headers. \n If this
                 field is empty, the default values are used."
@@ -490,6 +593,20 @@ spec:
                         terminates encryption (that is, edge-terminated or reencrypt
                         connections).  It does not affect the log format for TLS passthrough
                         connections."
+                      type: string
+                    logEmptyRequests:
+                      description: logEmptyRequests specifies how connections on which
+                        no request is received should be logged.  Typically, these
+                        empty requests come from load balancers' health probes or
+                        Web browsers' speculative connections ("preconnect"), in which
+                        case logging these requests may be undesirable.  However,
+                        these requests may also be caused by network errors, in which
+                        case logging empty requests may be useful for diagnosing the
+                        errors.  Allowed values for this field are "Log" and "Ignore".  If
+                        the field is empty. empty requests are logged.
+                      enum:
+                      - Log
+                      - Ignore
                       type: string
                   required:
                   - destination
@@ -890,6 +1007,14 @@ spec:
                               description: classicLoadBalancerParameters holds configuration
                                 parameters for an AWS classic load balancer. Present
                                 only if type is Classic.
+                              properties:
+                                connectionIdleTimeoutSeconds:
+                                  description: connectionIdleTimeoutSeconds is the
+                                    time interval, in seconds, that a connection may
+                                    be idle before the load balancer closes the connection.  If
+                                    not set, the timeout defaults to 60 seconds.
+                                  format: int64
+                                  type: integer
                               type: object
                             networkLoadBalancer:
                               description: networkLoadBalancerParameters holds configuration
